--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+    implementation 'no.tornado:tornadofx:1.7.19'
 }
 
 test {
